--- a/app/_css/globals.css
+++ b/app/_css/globals.css
@@ -26,6 +26,10 @@
     rgb(var(--background-start-rgb));
 } */
 
+body {
+  scroll-behavior: smooth;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
